@@ -17,7 +17,6 @@ import java.util.List;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 
-@Disabled
 @SpringBootTest(webEnvironment = SpringBootTest.WebEnvironment.RANDOM_PORT)
 @TestMethodOrder(MethodOrderer.OrderAnnotation.class)
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
@@ -36,12 +35,12 @@ class UserControllerIntegrationTest {
     void testSuccessfulLogin() throws Exception {
         // Arrange
         JSONObject loginCredentials = new JSONObject();
-        loginCredentials.put("email", "thomyorke@gmail.com");
+        loginCredentials.put("email", "joshhomme@gmail.com");
         loginCredentials.put("password", "123");
 
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_JSON);
-        headers.setAccept(Arrays.asList(MediaType.APPLICATION_JSON));
+        headers.setAccept(List.of(MediaType.APPLICATION_JSON));
 
         HttpEntity<String> request = new HttpEntity<>(loginCredentials.toString(), headers);
 
@@ -66,10 +65,10 @@ class UserControllerIntegrationTest {
         // Arrange
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_JSON);
-        headers.setAccept(Arrays.asList(MediaType.APPLICATION_JSON));
+        headers.setAccept(List.of(MediaType.APPLICATION_JSON));
         headers.setBearerAuth(authorizationToken);
 
-        HttpEntity request = new HttpEntity(headers);
+        HttpEntity<String> request = new HttpEntity<>(headers);
 
         // Act
         ResponseEntity<HttpResponse<List<User>>> response = testRestTemplate.exchange(this.baseUrl + "/all",
@@ -81,8 +80,8 @@ class UserControllerIntegrationTest {
         // Assert
         Assertions.assertEquals(HttpStatus.OK, response.getStatusCode(),
                 "HTTP Status code should be 200");
-        Assertions.assertTrue(users.size() == 2,
-                "Returned user's full name seems to be incorrect");
+        Assertions.assertTrue(users.size() >= 2,
+                "Returned users list size seems to be incorrect");
     }
 
     @Test
@@ -92,26 +91,26 @@ class UserControllerIntegrationTest {
         // Arrange
         HttpHeaders headers = new HttpHeaders();
         headers.setContentType(MediaType.APPLICATION_JSON);
-        headers.setAccept(Arrays.asList(MediaType.APPLICATION_JSON));
+        headers.setAccept(List.of(MediaType.APPLICATION_JSON));
         headers.setBearerAuth(authorizationToken);
 
-        HttpEntity request = new HttpEntity(headers);
+        HttpEntity<String> request = new HttpEntity<>(headers);
 
         // Act
-        ResponseEntity<HttpResponse<User>> response = testRestTemplate.exchange(this.baseUrl,
+        ResponseEntity<HttpResponse<ReturnUser>> response = testRestTemplate.exchange(this.baseUrl,
                 HttpMethod.GET,
                 request,
                 new ParameterizedTypeReference<>(){});
-        User user = response.getBody().getData();
+        ReturnUser returnUser = response.getBody().getData();
 
         // Assert
         Assertions.assertEquals(HttpStatus.OK, response.getStatusCode(),
                 "HTTP Status code should be 200");
-        Assertions.assertEquals("thomyorke@gmail.com", user.getEmail(),
-                "Returned user's full name seems to be incorrect");
-        Assertions.assertEquals("thomy568", user.getUserName(),
-                "Returned user's full name seems to be incorrect");
-        Assertions.assertEquals("Thom Yorke", user.getFullName(),
+        Assertions.assertEquals("joshhomme@gmail.com", returnUser.getEmail(),
+                "Returned user's email seems to be incorrect");
+        Assertions.assertEquals("joshh568", returnUser.getUserName(),
+                "Returned user's user name seems to be incorrect");
+        Assertions.assertEquals("Josh Homme", returnUser.getFullName(),
                 "Returned user's full name seems to be incorrect");
     }
 }
